<resources>
    <string name="app_name">Shorts App</string>
    <string name="image">image</string>
    <string name="signup">Signup</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="signin">SignIn</string>
    <string name="do_not_have_account">Do not have an account</string>
    <string name="home">Home</string>
    <string name="add_video">Add Video</string>
    <string name="profile">Profile</string>
    <string name="write_your_caption_here">Write your caption here</string>
    <string name="click_to_upload_video">Click to Upload Video</string>
    <string name="cancel">Cancel</string>
    <string name="post">Post</string>
    <string name="following">Following</string>
    <string name="follower">Follower</string>
    <string name="posts">Posts</string>
    <string name="_0">0</string>
    <string name="logout">Logout</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
</resources>