<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".log.LogActivity">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/image"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:letterSpacing="0.07"
        android:text="@string/app_name"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/lo_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:gravity="center"
            android:text="@string/signup"
            android:textSize="32sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:autofillHints=""
            android:background="@drawable/rounded_corner"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:autofillHints=""
            android:background="@drawable/rounded_corner"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/confirm_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:autofillHints=""
            android:background="@drawable/rounded_corner"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="12dp"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="12dp"
            android:padding="12dp"
            android:text="@string/signup"
            android:textColor="@color/white"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize,TextContrastCheck" />

        <TextView
            android:id="@+id/go_to_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lo_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:gravity="center"
            android:text="@string/signin"
            android:textSize="32sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email_input_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:autofillHints=""
            android:background="@drawable/rounded_corner"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/password_input_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:autofillHints=""
            android:background="@drawable/rounded_corner"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/submit_btn_in"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="12dp"
            android:padding="12dp"
            android:text="@string/signin"
            android:textColor="@color/white"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize,TextContrastCheck" />


        <TextView
            android:id="@+id/go_to_signup_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_not_have_account" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="12dp"
        android:padding="12dp"
        android:visibility="gone" />


</LinearLayout>


















